# b24-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README_ru.md  inspector.config.json  mcp_server_spec.md  mcp_stdio_proxy.py  mcp_ws_test.py  pyproject.toml
b24_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mcp_server/: __init__.py
mcp_server/app/: __init__.py  bitrix_client.py  dependencies.py  exceptions.py  main.py  prompt_loader.py  releases.py  settings.py
mcp_server/app/docs/: prompts_ru.md
mcp_server/app/mcp/: date_ranges.py  resources.py  routes.py  schemas.py  tools.py
tests/: conftest.py  test_bitrix_client.py  test_resources.py  test_tools.py
